# Github-Actions-test-for-VSTSDK

./: .gitmodules  CMakeLists.txt  README.md
.github/cmake/: action.yml
.github/workflows/: Windows Build.yml  cmake-multi-platform.yml  macOS_Build.yml
resource/: GAtfV_editor.uidesc
source/: GAtfV_cids.h  GAtfV_controller.cpp  GAtfV_controller.h  GAtfV_entry.cpp  GAtfV_processor.cpp  GAtfV_processor.h  version.h
